refector: add ResponseEntity & update dto name